Add @vercel/node dependency

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@azure/storage-blob": "^12.27.0",
+    "@vercel/node": "^5.2.1",
     "microsoft-cognitiveservices-speech-sdk": "^1.44.0",
     "openai": "^5.0.1"
   }
