--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "framework": null,
   "buildCommand": "npm run vercel-build || npm run build",
   "outputDirectory": "public",
   "installCommand": "npm install",
